@@ -29,11 +29,11 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDateTime;
 
-import javax.faces.context.ExternalContext;
-import javax.faces.context.FacesContext;
-import javax.faces.view.ViewScoped;
-import javax.inject.Inject;
-import javax.inject.Named;
+import jakarta.faces.context.ExternalContext;
+import jakarta.faces.context.FacesContext;
+import jakarta.faces.view.ViewScoped;
+import jakarta.inject.Inject;
+import jakarta.inject.Named;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -79,7 +79,7 @@ public class DownloadBean implements Serializable {
      */
     public void reset() {
         synchronized (this) {
-            logger.debug("reset (thread {})", Thread.currentThread().getId());
+            logger.debug("reset (thread {})", Thread.currentThread().threadId());
             downloadIdentifier = null;
         }
     }
